<resources>
    <string name="app_name">SimonsGuitarApp</string>
    <string name="start_practicing">Push \"Start\" to start practicing</string>
    <string name="major_chords_check_box">Majors</string>
    <string name="minor_chords_check_box">Minors</string>
    <string name="major_7_chords_check_box">Major 7s</string>
    <string name="minor_7_chords_check_box">Minor 7s</string>
    <string name="start_pause_button">Start</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="no_chords">Select which chords to practice</string>
    <string name="chord_image_view_content_description">Image of chord</string>
    <string name="seconds_short">s</string>
    <string name="practice_seek_bar_init">5s</string>
</resources>
