<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/chordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/start_practicing"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/majorChordsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/major_chords_check_box"
        app:layout_constraintBottom_toTopOf="@+id/minorChordsCheckBox"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/minorChordsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/minor_chords_check_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/major7ChordsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/major_7_chords_check_box"
        app:layout_constraintBottom_toTopOf="@+id/minor7ChordsCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/majorChordsCheckBox" />

    <CheckBox
        android:id="@+id/minor7ChordsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/minor_7_chords_check_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minorChordsCheckBox" />

    <Button
        android:id="@+id/startPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/start_pause_button"
        app:layout_constraintBottom_toTopOf="@+id/practiceTimeSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/chordImageView"
        android:layout_width="214dp"
        android:layout_height="270dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/chord_image_view_content_description"
        app:layout_constraintBottom_toTopOf="@+id/startPauseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <SeekBar
        android:id="@+id/practiceTimeSeekBar"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:max="9"
        android:progress="1"
        app:layout_constraintBottom_toTopOf="@+id/major7ChordsCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/seekBarTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/practice_seek_bar_init"
        app:layout_constraintBottom_toTopOf="@+id/major7ChordsCheckBox"
        app:layout_constraintStart_toEndOf="@+id/practiceTimeSeekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>